# 3DReconstruction

./: .gitignore  CMakeLists.txt  README.md  main.cpp  process_pcl.cpp  reconstruct.cpp
PointClouds/: cloud.ply  mesh_gt.ply
imgs/: calibration.json
imgs/temple/: temple_paths.txt
